# ark

./: README.md  ark.py  kod.py  observations.md  pyproject.toml  setup.py  tmp.csv
ark/: ark.py  tools.py
examples/: kod.py  mini.py  read.py  test.csv  titanic.md  titanic.py
tests/: test_methods.py
