[project]
name = "ark"
authors = [
    {name = "Lars Arvestad", email = "arve@math.su.se"}
]
description = "A pythonic dataframe"
readme = "README.md"
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Operating System :: OS Independent"
]
dynamic = ["version"]

dependencies = [
    "tabulate>=0.9"
]
requires-python = ">= 3.6"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.urls]
homepage = "https://github.com/arvestad/ark"


[tool.setuptools]
packages = ["ark"]


[tool.setuptools.dynamic]
version = {attr = "ark.version.__version__"}